--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
   base = "client"
-  command = "npm run build"
+  command = "npm install && npm run build"
   publish = "dist"
+
+[build.environment]
+  NODE_ENV = "production"
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
