--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "client"
-  command = "npm install && npx vite build"
+  command = "npm install && npm run build -w client"
   publish = "dist"
 
 [build.environment]
