--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "@react-oauth/google": "^0.12.2",
     "@supabase/supabase-js": "^2.49.5",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.6.0",
