--- a/client/package.json
+++ b/client/package.json
@@ -12,31 +12,34 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "@react-oauth/google": "^0.12.2",
-    "@supabase/supabase-js": "^2.49.5",
+    "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.294.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "tailwind-merge": "^2.0.0",
-    "zustand": "^4.4.0"
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.12.1",
+    "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
+    "react": "^19.1.0",
+    "react-big-calendar": "^1.18.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
+    "tailwind-merge": "^3.3.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^9.27.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0"
+    "tailwindcss": "^4.1.7",
+    "vite": "^6.3.5"
   },
   "main": "tailwind.config.js",
   "keywords": [],
