--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "client"
   command = "npm install && npx vite build"
-  publish = "dist"
+  publish = "client/dist"
 
 [build.environment]
   NODE_ENV = "production"
