--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^19.1.0",
     "react-big-calendar": "^1.18.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
     "zustand": "^5.0.5"
