--- a/client/package.json
+++ b/client/package.json
@@ -7,40 +7,55 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx vitest",
+    "test:coverage": "npx vitest run --coverage",
+    "test:e2e": "cypress run",
+    "test:e2e:dev": "cypress open",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,md}\""
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.0.0",
-    "@react-oauth/google": "^0.12.2",
-    "@supabase/supabase-js": "^2.49.8",
-    "@tanstack/react-query": "^5.76.1",
-    "axios": "^1.6.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.12.1",
-    "lucide-react": "^0.511.0",
+    "@auth0/auth0-react": "^2.2.4",
+    "@react-oauth/google": "^0.12.1",
+    "@supabase/supabase-js": "^2.39.3",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.5",
+    "lucide-react": "^0.294.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
-    "react": "^19.1.0",
-    "react-big-calendar": "^1.18.0",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^7.6.0",
-    "tailwind-merge": "^3.3.0",
-    "zustand": "^5.0.5"
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.0",
+    "tailwind-merge": "^2.2.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^9.27.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/coverage-v8": "^1.2.2",
+    "autoprefixer": "^10.4.17",
+    "cypress": "^13.6.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
-    "vite": "^6.3.5"
+    "vite": "^5.1.3",
+    "vitest": "^1.2.2"
   },
   "main": "tailwind.config.js",
   "keywords": [],
