--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "moment": "^2.30.1",
-    "react-big-calendar": "^1.18.0"
+    "motion": "^12.15.0",
+    "react-big-calendar": "^1.18.0",
+    "tailwind-merge": "^3.3.0"
   }
 }
